--- a/index.html
+++ b/index.html
@@ -4,175 +4,157 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="stylesheet.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <title>Lengga Priyani</title>
+    <title>complete responsive flower website design tutorial</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-   <div class="satu">
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
-      <div class="container">
-        <a href="#" class="navbar-brand">SEMUA TENTANG LENGGA</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navmenu"
-          >
-        </button>
-        <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a href="#BIODATA" class="nav-link">BIODATA</a>
-              </li>
-              <li class="nav-item">
-                <a href="#HOBI" class="nav-link">HOBI</a>
-              </li>
-          </ul>
-    </nav>
-    <section id="home">
-     <div class="container">
-         <div>
-           <h1>WELCOME TO </h1>
-           <h1>MY RANDOM STORY </h1>
+    <header>
+        <input type="checkbox" name="" id="toggler">
+        <label for="toggler" class="fas fa-bars"></label>
+            <a href="#" class="logo">About Me<span>.</span></a>
+        <nav class="navbar">
+            <a href="#home">home</a>
+            <a href="#about">about</a>
+            <a href="#hobie">hobie</a>
+            <a href="#contact">contact</a>
+        </nav>
+        <div class="icons">
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-user"></a>
+        </div>
+    </header>
+    <main>
+     <section class="home" id="home">
+        <div class="content">
+            <h3>About Me</h3>
+            <span> Lengga Priyani </span>
+            <p>Aku adalah seseorang yang dilahirkan di kota Reyog oleh orangtuaku yang bernama Supriyadi dan Supriyati.</p>
+            <a href="#" class="btn">Cari tau tentangku!</a>
+        </div>
+     </section>
+     <section class="about" id="about">
+        <div class="box-container">
+        <h1 class="heading"> <span> about </span> me </h1>
+        <div class="row">
+        <div class="video-container">
+            <img src="akulagi.jpg" width="800">
+        </div>
+        <div class="content">
+            <h3>My Biodata</h3>
+            <p>Hallo assalamualaikum semua, perkenalkan namaku Lengga Priyani. Teman-temanku biasa memanggilku "Lengga". Aku dilahirkan oleh orangtuaku di Kota Reyog yaitu Ponorogo pada tanggal 14 September 2001. Ayahku bernama Supriyadi, ayahku adalah seseorang yang dari dulu sampai sekarang masih menjadi motivasi dan penyemangat hidupku. Dan tentunya aku juga mempunyai ibu yang sangat hebat dalam segala hal, beliau bernama Supriyati. Ya, memang terbilang agak rancu gitu, karena nama ayah dan ibu ku hampir sama. Mungkin ini yang dinamakan berjodoh kali yaa. Aku merupakan anak kedua dari dua bersaudara. Aku mempunyai kakak perempuan yang bernama Galuh Priyani. Yaa betul, memang dalam keluargaku kami berempat hampir kembar kalau tentang nama, gatau juga sih apa motivasi kedua orangtua memberi nama kembar. Mungkin kalo manggil salah satu langsung menjawab semua gitu kali ya. Kakakku ini adalah orang yang sangat kalem dan mengalah kalo sama aku, aku sangat bersyukur dilahirkan untuk menjadi adik dari kakaku ini. Karena hampir semua hal yang mestinya dia ingin memiliki, namun jika aku menginginkan hal itu, maka kakakku akan mengalah dan memberikannya kepadaku. Hihi love banget sama my little familiy.</p>
+            <a href="#" class="btn">I love that</a>
+        </div>
+        </div>
+        </div>
+     </section>
+     <section class="icons-container">
+        <div class="icons">
+        <div class="info">
+            <h3>Mahasiswa Matematika</h3>
+            <span>2020</span>
+        </div>
+        </div>
+        <div class="icons">
+        <div class="info">
+            <h3>Anak Bungsu</h3>
+            <span>Dua Bersaudara</span>
+        </div>
+        </div>
+        <div class="icons">
+        <div class="info">
+            <h3>Keras Kepala</h3>
+            <span>bad attitude</span>
+        </div>
+        </div>
+        <div class="icons">
+        <div class="info">
+            <h3>Semamgat</h3>
+            <span>good attitude</span>
+        </div>
+        </div>
+     </section>
+     <section class="hobie" id="hobie">
+        <h1 class="heading"> My <span>Hobie</span> </h1>
+        <div class="box-container">
+        <div class="box">
+            <div class="image">
+                <img src="lari.png" alt="">
+            </div>
+            <div class="content">
+                <h3>Lari</h3>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="beladiri.png" alt="">
+            </div>
+            <div class="content">
+                <h3>Beladiri</h3>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="berenang.png" alt="">
+            </div>
+            <div class="content">
+                <h3>Berenang</h3>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="healing.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>Healing</h3>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="nobar.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>Nonton Film</h3>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="kuliner.png" alt="">
+            </div>
+            <div class="content">
+                <h3>Kulineran</h3>
+            </div>
+        </div>
+        </div>
+     </section>
+    </main>
+     <section class="contact" id="contact">
+        <h1 class="heading"> <span> contact </span> us </h1>
+        <div class="row">
+        <form action="">
+            <input type="text" placeholder="name" class="box">
+            <input type="email" placeholder="email" class="box">
+            <input type="number" placeholder="number" class="box">
+            <textarea name="" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
+            <input type="submit" value="send message" class="btn">
+        </form>
+        <div class="image">
+            <img src="https://img.freepik.com/free-vector/illustration-female-character-wearing-hijab-working-office_10045-686.jpg?size=338&ext=jpg&ga=GA1.2.838532070.1666341093" >
+        </div>
+        </div>
+     </section>
+    <footer>
+     <section class="footer">
+        <div class="box-container">
+            <div class="box">
+            <h3>contact info</h3>
+            <a href="#">0853 3036 9472</a>
+            <a href="#">lenggapriyani63068@@gmail.com</a>
+            <a href="#">Ponorogo, Jawa Timur</a>
+            </div>
          </div>
-     </div>
-    </section>
-   </div>
-  </header>
-  <main>
-   <section id="BIODATA" class="p-5">
-    <div class="container">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-md">
-          <img src="akuuu.jpg" class="img-fluid" alt="" />
-        </div>
-        <div class="col-md p-5">
-          <h2>BIODATA</h2>
-          <p>
-            Hallo assalamualaikum semua, perkenalkan namaku Lengga Priyani. Teman-temanku biasa memanggilku "Lengga". Aku dilahirkan oleh orangtuaku di Kota Reyog yaitu Ponorogo pada tanggal 14 September 2001. Ayahku bernama Supriyadi, ayahku adalah seseorang yang dari dulu sampai sekarang masih menjadi motivasi dan penyemangat hidupku. Dan tentunya aku juga mempunyai ibu yang sangat hebat dalam segala hal, beliau bernama Supriyati. Ya, memang terbilang agak rancu gitu, karena nama ayah dan ibu ku hampir sama. Mungkin ini yang dinamakan berjodoh kali yaa. Aku merupakan anak kedua dari dua bersaudara. Aku mempunyai kakak perempuan yang bernama Galuh Priyani. Yaa betul, memang dalam keluargaku kami berempat hampir kembar kalau tentang nama, gatau juga sih apa motivasi kedua orangtua memberi nama kembar. Mungkin kalo manggil salah satu langsung menjawab semua gitu kali ya. Kakakku ini adalah orang yang sangat kalem dan mengalah kalo sama aku, aku sangat bersyukur dilahirkan untuk menjadi adik dari kakaku ini. Karena hampir semua hal yang mestinya dia ingin memiliki, namun jika aku menginginkan hal itu, maka kakakku akan mengalah dan memberikannya kepadaku. Hihi love banget sama my little familiy.
-          </p>
-          </p>
-        </div>
-      </div>
-    </div>
-   </section>
-   <section id="HOBI" class="p-5">
-    <div class="container">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-md">
-          <img src="fotokuuuu.jpg" class="img-fluid" alt="" />
-        </div>
-        <div class="col-md p-5">
-          <h2>HOBI</h2>
-          <p>
-            Kali ini mau bercerita tentang hobiku yang kesekian yang tumbuh karena paksaan ayahku. Yaa, hobiku kali ini adalah bela diri. Dulu, ketika aku masih SMP, ayahku adalah seorang Coach di beladiri maka dari itu aku dibujuk untuk ikut beladiri itu. Namun awalnya aku menolak, lama kelamaan setelah banyak rayuan dan bujukan akhirnya aku mau. Dan kemudian berlanjut sampai sekarang. Setelah beberapa kali mengikuti kejuaraan, aku memutuskan untuk mencoba hal baru yaitu menjadi Wasit dan Juri. Karena sudah sesuai dengan kriteria dan umur yang aku miliki. Foto disamping ini adalah pertama kalinya aku menjadi Wasit dan Juri di KEJURKAB Ponorogo.
-          </p>
-          </p>
-        </div>
-      </div>
-    </div>
-   </section>
-   <section>
-    <div class="container">
-        <div class="card p-5">
-            <h2>Ini adalah beberapa kegiatanku saat mengikuti KEJURKAB :</h2>
-             <table class="table table-striped">
-                <tr>
-                    <th class="center">Waktu</th>
-                    <th class="center">Kegiatan</th>
-                </tr>
-                <tr>
-                    <th class="center">04.00</th>
-                    <td>Bangun</td>
-                </tr>
-                <tr>
-                    <td class="center">04.15</td>
-                    <td>Mandi</td>
-                </tr>
-                <tr>
-                    <td class="center">04.30</td>
-                    <td>Sholat</td>
-                </tr>
-                <tr>
-                    <td class="center">04.45</td>
-                    <td>Ngaji</td>
-                </tr>
-                <tr>
-                    <td class="center">05.20</td>
-                    <td>Siap-siap</td>
-                </tr>
-                <tr>
-                    <td class="center">06.15</td>
-                    <td>Berangkat</td>
-                </tr>
-                <tr>
-                  <td class="center">08.00</td>
-                  <td>Pertandingan dimulai</td>
-              </tr>
-                <tr>
-                    <td class="center">11.30</td>
-                    <td>ISHOMA</td>
-                </tr>
-                <tr>
-                    <td class="center">12.20</td>
-                    <td>Pertandingan dimulai</td>
-                </tr>
-                <tr>
-                    <td class="center">19.00</td>
-                    <td>Pulang</td>
-                </tr>
-                <tr>
-                    <td class="center">20.30</td>
-                    <td>Mandi</td>
-                </tr>
-                <tr>
-                    <td class="center">21.00</td>
-                    <td>Sholat+Ngaji</td>
-                </tr>
-                <tr>
-                    <td class="center">22.00</td>
-                    <td>Tidur</td>
-                </tr>
-            </table>
-        </div>
-    </div>
-   </section>
-  </main>
-  <section>
-  <div class="container">
-  <form action="https://formspree.io/mbjzbwaj" method="POST" id="my-form">
-    <div class="form-group">
-      <label for="firstName"> Name</label>
-      <input type="text" id="firstName" name="Name">
-    </div>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email">
-    </div>
-    <div class="form-group">
-      <label for="massage">Kritik & Saran</label>
-      <textarea name="massage" id="massage" cols="30" rows="10"></textarea>
-    </div>
-    <button type="submit">Submit</button>
-  </form>
-  </div>
-  </section>
-  <footer>
-		<p>Ambil Risiko, Bermimpi Lebih Besar, dan Berharap Besar</p>
-		<p>For more information, follow to my social media :</p>
-		<div class="social">
-      <a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-		</div>
-		<p class="end">By: Lengga Priyani</p>
-  </footer>   
+         <div class="credit"> created by <span> Lengga Priyani</span> </div>
+     </section>
+    </footer>
 </body>
 </html>
